--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@angular/platform-browser-dynamic": "~19.0.0",
     "@angular/router": "~19.0.0",
     "rxjs": "~7.8.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.0",
+    "@ngrx/signals": "^19.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~19.0.0",
@@ -28,6 +29,7 @@
     "@angular/compiler-cli": "~19.0.0",
     "@angular/language-service": "~19.0.0",
     "@eslint/js": "^9.8.0",
+    "@ngrx/signals": "^19.0.0",
     "@nx/angular": "20.2.2",
     "@nx/eslint": "20.2.2",
     "@nx/eslint-plugin": "20.2.2",
